Alert, report getAll, dll